add : crud with dropbox storage (img)

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,15 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Firebase": {
-    "BasePath": "https://pruebafirebase-b29bd-default-rtdb.firebaseio.com/",
-    "AuthSecret": "dk3XFlWAWy7DzKjmZEPy2mTKZ3v22R5q4182feBE",
-    "API": "AIzaSyAH6OHH8l1iUhW94WtsDQ5En8-VDvrL7ZA"
-  },
-  "Dropbox": {
-    "AppKey": "te6ftm86ojwbs0i",
-    "AppSecret": "wftb2ufeu8at85b",
-    "AccessToken": "sl.CEZ7QtR0rnkLg3eeyctowi4ZlROrcWK3WW-DZOi2g4ITxB5jc569FVIS5eZyA5sfjU7FtjI3_ah7J0bfugNYFbFHiChjKwSGUJMXjhnq6DtueUf8O-NpUbyulEti2z4RBq2r_oqu8F3RYNs"
-  }
+  "AllowedHosts": "*"
 }
