--- a/appsettings.json
+++ b/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Firebase": {
-    "BasePath": "https://pruebafirebase-b29bd-default-rtdb.firebaseio.com/",
-    "AuthSecret": "dk3XFlWAWy7DzKjmZEPy2mTKZ3v22R5q4182feBE"
-  }
+  "AllowedHosts": "*"
 }
