--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Firebase": {
+    "BasePath": "",
+    "AuthSecret": "",
+    "API": ""
+  },
+  "Dropbox": {
+    "AppKey": "",
+    "AppSecret": "",
+    "AccessToken": ""
+  }
 }
